--- a/_config.yml
+++ b/_config.yml
@@ -134,3 +134,11 @@ authors:
     full_bio_ms:    '<a name="Afnizanfaizal Abdullah" href="http://comp.utm.my/afnizanfaizal/" style="font-weight:bold">Afnizanfaizal Abdullah</a>, seorang pensyarah kanan yang aktif di dalam penyelidikan Kepintaran Buatan dan Bioinformatik.'
     full_bio_en:    '<a name="Afnizanfaizal Abdullah" href="http://comp.utm.my/afnizanfaizal/" style="font-weight:bold">Afnizanfaizal Abdullah</a>, is a senior lecturer who active in research of Artificial Intelligence and Bioinformatics'
     pic:            http://comp.utm.my/afnizanfaizal/files/2013/01/greyscale-brand.jpg
+
+  syafiqazizi:
+    name:           Mohd Syafiq Azizi 
+    short_bio:      Pengasas syarikat SQAI Technologies
+    full_bio_ms:    Kepakaran Syafiq adalah dalam pembangunan web menggunakan PHP, Framework Laravel, Yii2. Mempunyai minat mendalam bidang keusahawanan, mempelajari teknologi baru dan membuat training. Kini sedang membangunkan startup bernama SuperCoach. Berazam untuk mengubah gaya hidup masyarakat Malaysia.
+    full_bio_en:    His expertise are in Web Development using PHP, Laravel and Yii2 framework. Has a deep passion in entreprenuership, learning new technology and holding a training. Currently developing a startup called SuperCoach. Dream to change the lifestyle of Malaysian.
+    pic:            http://i.imgur.com/j4jW2Gs.jpg
+
