--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ authors:
   syafiqazizi:
     name:           Mohd Syafiq Azizi 
     short_bio:      Pengasas syarikat SQAI Technologies
-    full_bio_ms:    Kepakaran Syafiq adalah dalam pembangunan web menggunakan PHP, Framework Laravel, Yii2. Mempunyai minat mendalam bidang keusahawanan, mempelajari teknologi baru dan membuat training. Kini sedang membangunkan startup bernama SuperCoach. Berazam untuk mengubah gaya hidup masyarakat Malaysia.
-    full_bio_en:    His expertise are in Web Development using PHP, Laravel and Yii2 framework. Has a deep passion in entreprenuership, learning new technology and holding a training. Currently developing a startup called SuperCoach. Dream to change the lifestyle of Malaysian.
+    full_bio_ms:    Mohd Syafiq Azizi adalah pengasas syarikat SQAI Technologies. Kepakaran Syafiq adalah dalam pembangunan web menggunakan PHP, Framework Laravel, Yii2. Mempunyai minat mendalam bidang keusahawanan, mempelajari teknologi baru dan membuat training. Kini sedang membangunkan startup bernama SuperCoach. Berazam untuk mengubah gaya hidup masyarakat Malaysia.
+    full_bio_en:    Mohd Syafiq Aziz is a founder of SQAI Technologies. His expertise are in Web Development using PHP, Laravel and Yii2 framework. Has a deep passion in entreprenuership, learning new technology and holding a training. Currently developing a startup called SuperCoach. Dream to change the lifestyle of Malaysian.
     pic:            http://i.imgur.com/j4jW2Gs.jpg
 
