updated config with my bio
just updated my bios

--- a/_config.yml
+++ b/_config.yml
@@ -141,4 +141,11 @@ authors:
     full_bio_ms:    Mohd Syafiq Azizi adalah pengasas syarikat SQAI Technologies. Kepakaran Syafiq adalah dalam pembangunan web menggunakan PHP, Framework Laravel, Yii2. Mempunyai minat mendalam bidang keusahawanan, mempelajari teknologi baru dan membuat training. Kini sedang membangunkan startup bernama SuperCoach. Berazam untuk mengubah gaya hidup masyarakat Malaysia.
     full_bio_en:    Mohd Syafiq Aziz is a founder of SQAI Technologies. His expertise are in Web Development using PHP, Laravel and Yii2 framework. Has a deep passion in entreprenuership, learning new technology and holding a training. Currently developing a startup called SuperCoach. Dream to change the lifestyle of Malaysian.
     pic:            http://i.imgur.com/j4jW2Gs.jpg
+ 
+ shafiqmustapa:
+    name:           Mohammad Shafiq Bin Mohd Mustapa
+    short_bio:      Technology Consultant at Sustento Solutions
+    full_bio_ms:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, seorang konsultan teknologi yang mahir PHP (Laravel, CodeIgniter, vanilla) dan Android(native dan hybrid). 15 tahun berpengalaman dalam dunia IT'
+    full_bio_en:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, is a technology consultant who love PHP (Laravel, CodeIgniter, vanilla) and Android(native and hybrid). 15 years of experience in IT world'
+    pic:            https://avatars1.githubusercontent.com/u/305408?v=3&s=96
 
