--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ authors:
   shafiqmustapa:
     name:           Mohammad Shafiq Bin Mohd Mustapa
     short_bio:      Technology Consultant at Sustento Solutions
-    full_bio_ms:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, seorang konsultan teknologi yang mahir PHP (Laravel, CodeIgniter, vanilla) dan Android(native dan hybrid). 15 tahun berpengalaman dalam dunia IT'
-    full_bio_en:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, is a technology consultant who love PHP (Laravel, CodeIgniter, vanilla) and Android(native and hybrid). 15 years of experience in IT world'
+    full_bio_ms:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, seorang konsultan teknologi yang mahir PHP (Laravel, CodeIgniter, vanilla) dan Android(native dan hybrid). 15 tahun berpengalaman dalam dunia IT.'
+    full_bio_en:    '<a name="Shafiq Mustapa" href="http://shafiqmustapa.my" style="font-weight:bold">Shafiq Mustapa</a>, is a technology consultant who love PHP (Laravel, CodeIgniter, vanilla) and Android(native and hybrid). 15 years of experience in IT world.'
     pic:            https://avatars1.githubusercontent.com/u/305408?v=3&s=96
 
